[package]
edition = "2021"
name = "marketprice-middleware"
version = "0.1.0"

[dependencies]
rumqttc = "0.16.0"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
