[package]
edition = "2021"
name = "marketprice"
version = "0.1.0"

[dependencies]
# others
colored = "2.0.0"
dotenv = "0.15.0"
const_format = "0.2.26"

# mqtt
rumqttc = "0.16.0"
tokio = {version = "1.21.2", features = ["rt-multi-thread"]}

# log
env_logger = "0.9.1"
log = "0.4"

# uuid
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
